# knowledge-agent

./: .gitignore  Cargo.toml  README.md
crates/knowledge-agent-cli/: Cargo.toml
crates/knowledge-agent-cli/src/: main.rs
crates/knowledge-agent-core/: Cargo.toml
crates/knowledge-agent-core/src/: lib.rs  settings.rs
crates/knowledge-agent-core/src/maintenance/: checks.rs  inbox.rs  mod.rs
crates/knowledge-agent-core/src/vault/: assets.rs  confirmation.rs  frontmatter.rs  graph.rs  index_docs.rs  mod.rs  policy.rs  scanner.rs  wikilinks.rs
crates/knowledge-agent-core/tests/: assets_tests.rs  confirmation_tests.rs  index_graph_tests.rs  maintenance_tests.rs  markdown_parse_tests.rs  settings_tests.rs  vault_scanner_tests.rs
crates/knowledge-agent-core/tests/fixtures/basic-vault/: .knowledge-agent.toml  README.md
crates/knowledge-agent-core/tests/fixtures/basic-vault/docs/: _index.md
crates/knowledge-agent-core/tests/fixtures/basic-vault/docs/concepts/: _index.md  agent-harness.md
crates/knowledge-agent-core/tests/fixtures/basic-vault/docs/research/: _index.md
crates/knowledge-agent-harness/: Cargo.toml
crates/knowledge-agent-harness/src/: ask.rs  lib.rs  tools.rs
crates/knowledge-agent-harness/tests/: ask_tests.rs
crates/knowledge-agent-server/: Cargo.toml
crates/knowledge-agent-server/src/: lib.rs  routes.rs  state.rs
crates/knowledge-agent-server/tests/: server_tests.rs
docs/superpowers/plans/: 2026-06-11-chat-foundation.md  2026-06-11-knowledge-agent-foundation.md  2026-06-11-knowledge-agent-web-foundation.md  2026-06-11-llm-harness-integration.md
docs/superpowers/specs/: 2026-06-11-chat-foundation-design.md  2026-06-11-knowledge-agent-design.md  2026-06-11-llm-harness-integration-design.md
scripts/: install-user.ps1  package.ps1  uninstall-user.ps1  verify-package.ps1
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  types.ts
web/src/pages/: AskPage.tsx  IngestPage.tsx  MaintenancePage.tsx  SettingsPage.tsx  StatusPage.tsx  VaultPage.tsx
