[workspace]
members = [
  "crates/knowledge-agent-cli",
  "crates/knowledge-agent-core",
  "crates/knowledge-agent-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
gray_matter = "0.2"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
toml = "0.9"
walkdir = "2"
