[package]
name = "knowledge-agent-harness"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
llm-harness.workspace = true
llm-harness-loop.workspace = true
llm_adapter.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
llm-harness-loop = { workspace = true, features = ["test-utils"] }
