[package]
name = "knowledge-agent-harness"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
knowledge-agent-core = { path = "../knowledge-agent-core" }
llm-harness.workspace = true
llm-harness-loop.workspace = true
llm_adapter.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
llm-harness-loop = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
