[package]
name = "knowledge-agent-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
knowledge-agent-core = { path = "../knowledge-agent-core" }
knowledge-agent-harness = { path = "../knowledge-agent-harness" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
